--- a/nginx/1.22/slim-loongnix/Dockerfile
+++ b/nginx/1.22/slim-loongnix/Dockerfile
@@ -81,7 +81,8 @@ RUN set -x \
                         $nginxPackages \
                         gettext-base \
                         curl \
-    && apt-get remove --purge --auto-remove -y && rm -rf /var/lib/apt/lists/* /etc/apt/sources.list.d/nginx.list \
+    && apt-get remove --purge --auto-remove -y && apt-get clean all \
+    && rm -rf /var/lib/apt/lists/* /etc/apt/sources.list.d/nginx.list \
     \
 # if we have leftovers from building, let's purge them (including extra, unnecessary build deps)
     && if [ -n "$tempDir" ]; then \
