--- a/mariadb/10.6/slim-buster/Dockerfile
+++ b/mariadb/10.6/slim-buster/Dockerfile
@@ -1,4 +1,4 @@
-FROM loongnix:20-slim
+FROM debian:buster-slim
 
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
 RUN groupadd -r mysql && useradd -r -g mysql mysql
