perf: add mirror

--- a/guacamole-server/1.5.0/slim-buster/Dockerfile
+++ b/guacamole-server/1.5.0/slim-buster/Dockerfile
@@ -96,19 +96,14 @@ ARG TOOLS="                       \
         wget"
 
 ARG DEBIAN_FRONTEND=noninteractive
-
+ARG APT_MIRROR=http://mirrors.ustc.edu.cn
 RUN set -ex \
+    && sed -i "s@http://.*.debian.org@${APT_MIRROR}@g" /etc/apt/sources.list \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && apt-get update \
     && apt-get install -y --no-install-recommends $BUILD_DEPENDENCIES \
     && apt-get install -y --no-install-recommends $TOOLS \
     && echo "no" | dpkg-reconfigure dash \
-    && apt-get clean all \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN set -ex \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends freerdp2-dev \
     && apt-get clean all \
     && rm -rf /var/lib/apt/lists/*
 
@@ -145,7 +140,9 @@ ARG RUNTIME_DEPENDENCIES="            \
 ARG DEBIAN_FRONTEND=noninteractive
 COPY --from=builder ${PREFIX_DIR} ${PREFIX_DIR}
 
+ARG APT_MIRROR=http://mirrors.ustc.edu.cn
 RUN set -ex \
+    && sed -i "s@http://.*.debian.org@${APT_MIRROR}@g" /etc/apt/sources.list \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && apt-get update \
     && apt-get install -y --no-install-recommends $RUNTIME_DEPENDENCIES \
