fix: add guacamole-server build deb

--- a/guacamole-server/1.5.0/slim-buster/Dockerfile
+++ b/guacamole-server/1.5.0/slim-buster/Dockerfile
@@ -85,6 +85,7 @@ ARG BUILD_DEPENDENCIES="          \
         g++                       \
         libcairo2-dev             \
         libjpeg62-turbo-dev       \
+        libssl-dev                \
         libtool                   \
         libwebp-dev               \
         make"
