perf: guacenc 添加 ffmpeg 依赖

--- a/guacamole-server/1.5.1/slim-buster/guacenc/Dockerfile
+++ b/guacamole-server/1.5.1/slim-buster/guacenc/Dockerfile
@@ -75,6 +75,7 @@ ENV LD_LIBRARY_PATH=${PREFIX_DIR}/lib
 
 ARG RUNTIME_DEPENDENCIES="            \
         ca-certificates               \
+        ffmpeg                        \
         fonts-dejavu                  \
         fonts-liberation              \
         ghostscript                   \
