perf: 清理 apt 缓存

--- a/mc/buster-slim/Dockerfile
+++ b/mc/buster-slim/Dockerfile
@@ -26,7 +26,8 @@ RUN set -ex \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && apt-get update \
     && apt-get install -y --no-install-recommends curl ca-certificates util-linux gzip lsof tar net-tools jq \
-    && apt-get remove --purge --auto-remove -y && rm -rf /var/lib/apt/lists/* \
+    && apt-get remove --purge --auto-remove -y \
+    && apt-get clean all && rm -rf /var/lib/apt/lists/* \
     && chmod +x /usr/bin/mc
 
 ENTRYPOINT ["mc"]
