--- a/maven/3.8.6/openjdk-8-slim/Dockerfile
+++ b/maven/3.8.6/openjdk-8-slim/Dockerfile
@@ -3,6 +3,7 @@ FROM openjdk:8-jdk-slim
 
 RUN apt-get update \
   && apt-get install -y curl procps \
+  && apt-get clean all \
   && rm -rf /var/lib/apt/lists/*
 
 ARG MAVEN_VERSION=3.8.6
