--- a/mc/buster-slim/Dockerfile
+++ b/mc/buster-slim/Dockerfile
@@ -27,7 +27,7 @@ RUN set -ex \
     && apt-get update \
     && apt-get install -y --no-install-recommends curl ca-certificates util-linux gzip lsof tar net-tools jq \
     && apt-get remove --purge --auto-remove -y \
-    && apt-get clean all && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/lib/apt/lists/* \
     && chmod +x /usr/bin/mc
 
 ENTRYPOINT ["mc"]
