--- a/nginx/1.24/slim-buster/Dockerfile
+++ b/nginx/1.24/slim-buster/Dockerfile
@@ -96,7 +96,7 @@ RUN set -x \
                         $nginxPackages \
                         gettext-base \
                         curl \
-    && apt-get remove --purge --auto-remove -y && apt-get clean all \ 
+    && apt-get remove --purge --auto-remove -y \
     && rm -rf /var/lib/apt/lists/* /etc/apt/sources.list.d/nginx.list \
     \
 # if we have leftovers from building, let's purge them (including extra, unnecessary build deps)
